--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "mongoose": "^4.5.0",
+    "mongoose-find-one-or-create": "^0.2.0",
+    "mongoose-findorcreate": "^0.1.2",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
 }
