--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-jwt": "^3.4.0",
     "express-session": "^1.13.0",
     "mongoose": "^4.5.0",
     "mongoose-find-one-or-create": "^0.2.0",
